# odranid

./: .dockerignore  .env.example  .gitignore  AGENT.md  ARQUITECTURA_MICROSERVICIO.md  BUSCAR_PRODUCTOS_TOOL.md  CHATWOOT_WEBHOOK_SETUP.md  Dockerfile  Makefile  POSTGRES_VPS_SETUP.md  PREPARACION_PRODUCCION.md  RESUMEN_PROYECTO.md  ROADMAP_TECNICO.md  SUPABASE_SETUP.md  buscar_productos_tool.schema.json  docker-compose.yml  notifier.py  prompt_agente_odranid.md  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  catalog_context.py  catalog_sync.py  celery_app.py  chat_memory.py  chatwoot.py  chatwoot_service.py  config.py  coverage.py  db_search.py  domain_synonyms.py  embeddings.py  main.py  models.py  normalization.py  postgres_store.py  query_parser.py  rag_precontext.py  retrieval.py  search_common.py  typesense_client.py  typesense_index.py  typesense_search.py  typesense_sync.py
deploy/: Caddyfile
docs/: AGENT.md  DESPLIEGUE.md  INFRA_PRODUCCION.md  POSTGRES_VPS_SETUP.md  RESUMEN_PROYECTO.md  ROADMAP_CALIDAD_AGENTE.md  ROADMAP_TECNICO.md
evals/: README.md  assertions.py  conftest.py  test_conversational_evals.py
postgres/: schema.sql
scripts/: analyze_catalog.py  analyze_shadow_report.py  backfill_chatwoot_history.py  backup_postgres.sh  build_eval_snapshot.py  export_conversation.py  fetch_woocommerce.py  replay_chatwoot_conversations.py  sync_catalog.py
tests/: test_agent.py  test_catalog_context.py  test_catalog_sync.py  test_chat_memory.py  test_chatwoot.py  test_chatwoot_production.py  test_coverage.py  test_db_search.py  test_domain_synonyms.py  test_export_conversation.py  (+11 more)
(+72 files in other folders)
