[project]
name = "odranid-catalog-service"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "celery[redis]==5.6.3",
    "fastapi==0.136.3",
    "flower==2.0.1",
    "idna==3.17",
    "openai==2.40.0",
    "psycopg[binary]==3.3.4",
    "psycopg-pool==3.3.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.30",
    "redis==6.4.0",
    "typesense==0.21.0",
    "uvicorn[standard]==0.48.0",
    "pydantic-ai==1.105.0",
    "logfire==4.35.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pyyaml==6.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
# `pytest` pelado corre solo los unitarios; los evals (llaman al LLM real, gastan
# tokens) se corren explícitamente con `make eval` o `pytest evals`.
testpaths = ["tests"]
markers = [
    "eval: evals conversacionales contra el LLM real y catalogo congelado",
]
